set min height for hero area to fix layout issue for short but wide screens

--- a/src/stylesheets/Home.module.sass
+++ b/src/stylesheets/Home.module.sass
@@ -67,3 +67,4 @@
   color: #fff
   +screen(greaterThanMedium)
     height: 100vh
+    min-height: 750px
